# djt

./: .dockerignore  Dockerfile  entrypoint  manage.py  pyproject.toml
.github/workflows/: release.yml  test.yml
config/: asgi.py  celery.py  formatters.py  gunicorn.py  storages.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  prod.py  test.py
djt/ai_samples/: admin.py  apps.py  client.py  models.py
djt/ai_samples/migrations/: 0001_initial.py  0002_text.py
djt/auth/: admin.py  apps.py  managers.py  models.py  serializers.py  tests.py  urls.py  views.py
djt/auth/management/commands/: init.py
djt/auth/migrations/: 0001_initial.py  0002_user_photo.py
